solved the box not coming behind when the screen size is little smaller

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -235,7 +235,7 @@ cursor: pointer;
 
 section{
     background-color: rgb(34, 34, 34);
-    height: 730px;
+    min-height: 730px;
     padding: 3%;
     color: white;
     box-sizing: border-box;
@@ -250,6 +250,7 @@ section{
     width: 100%;
 display: flex;
 flex-wrap: wrap;
+justify-content: center;
 }
 .section-container1 .text{
 width: 460px;
@@ -279,6 +280,7 @@ margin-top: 165px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 10px 0px ;
     
 }
 .section-container1 .box .inner-box{
